--- a/index.html
+++ b/index.html
@@ -180,14 +180,11 @@
                     <main>
                         <h1 id="들어가며"><a class="header" href="#들어가며">들어가며</a></h1>
 <p>successful Lisp의 3장 - 12개의 레슨으로 배우는 필수 리스프 번역본입니다.</p>
-<h2 id="ref"><a class="header" href="#ref">Ref</a></h2>
-<ul>
-<li><a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html</a>
-<ul>
-<li><a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a></li>
-</ul>
-</li>
-</ul>
+<p>다비드 라킨스, 번역을 허락해주셔서 감사합니다. 그의 웹사이트는 <a href="http://lamkins.net">http://lamkins.net</a> 입니다.
+그의 github는 <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>이며 그의 책의 원문은  소스코드는 <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">이곳</a>에서 볼 수 있습니다. Successful Lisp의 저작권은 David Lamkins에게 있습니다.</p>
+<p>David Lamkins, Thank you for allowing me to translate your book. His personnal website is <a href="http://lamkins.net">http://lamkins.net</a>
+His github is <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a> then His original book is <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">here</a>.
+and David Lamkins owns Successful Lisp's copyright.</p>
 
                     </main>
 
