--- a/Index.html
+++ b/Index.html
@@ -179,12 +179,14 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="들어가며"><a class="header" href="#들어가며">들어가며</a></h1>
-<p>successful Lisp의 3장 - 12개의 레슨으로 배우는 필수 리스프 번역본입니다.</p>
-<p>다비드 라킨스, 번역을 허락해주셔서 감사합니다. 그의 웹사이트는 <a href="http://lamkins.net">http://lamkins.net</a> 입니다.
-그의 github는 <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>이며 그의 책의 원문은  소스코드는 <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">이곳</a>에서 볼 수 있습니다. Successful Lisp의 저작권은 David Lamkins에게 있습니다.</p>
-<p>David Lamkins, Thank you for allowing me to translate your book. His personnal website is <a href="http://lamkins.net">http://lamkins.net</a>
-His github is <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a> then His original book is <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">here</a>.
-and David Lamkins owns Successful Lisp's copyright.</p>
+<p>David Lamkins의 Successful Lisp의 한국어 번역본입니다.</p>
+<p>다비드 라킨스, 번역을 허락해주셔서 감사합니다.
+그의 웹사이트는 <a href="http://lamkins.net">http://lamkins.net</a>, github는 <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>입니다.
+그의 책은 아마존 닷컴 <a href="https://www.amazon.com/exec/obidos/ASIN/3937526005/daviblamkwebs-20?creative=327641&amp;camp=14573&amp;link_code=as1">이곳</a>에서 원서로 구입할 수 있으며 온라인 버전은 <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">이곳</a>에서 볼 수 있습니다. Successful Lisp의 모든 저작권은 David Lamkins에게 있습니다.</p>
+<p>This is David Lamkins's Successful Lisp's Korean translation.</p>
+<p>David Lamkins, Thank you for allowing me to translate your book.
+His personnal website is <a href="http://lamkins.net">http://lamkins.net</a>, github is <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>.
+You can buy His original book on Amazon.com <a href="https://www.amazon.com/exec/obidos/ASIN/3937526005/daviblamkwebs-20?creative=327641&amp;camp=14573&amp;link_code=as1">here</a>and you can check his online version of successfull lisp <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">here</a>. David Lamkins owns All of Successful Lisp's copyright.</p>
 
                     </main>
 
