deploy: 86f701a5014a645ee38ff92d949b8df5d8120697

--- a/print.html
+++ b/print.html
@@ -177,14 +177,26 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="들어가며"><a class="header" href="#들어가며">들어가며</a></h1>
-<p>David Lamkins의 Successful Lisp의 한국어 번역본입니다.</p>
-<p>다비드 라킨스, 번역을 허락해주셔서 감사합니다.
-그의 웹사이트는 <a href="http://lamkins.net">http://lamkins.net</a>, github는 <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>입니다.
-그의 책은 아마존 닷컴 <a href="https://www.amazon.com/exec/obidos/ASIN/3937526005/daviblamkwebs-20?creative=327641&amp;camp=14573&amp;link_code=as1">이곳</a>에서 원서로 구입할 수 있으며 온라인 버전은 <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">이곳</a>에서 볼 수 있습니다. Successful Lisp의 모든 저작권은 David Lamkins에게 있습니다.</p>
-<p>This is David Lamkins's Successful Lisp's Korean translation.</p>
-<p>David Lamkins, Thank you for allowing me to translate your book.
-His personnal website is <a href="http://lamkins.net">http://lamkins.net</a>, github is <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>.
-You can buy His original book on Amazon.com <a href="https://www.amazon.com/exec/obidos/ASIN/3937526005/daviblamkwebs-20?creative=327641&amp;camp=14573&amp;link_code=as1">here</a>and you can check his online version of successfull lisp <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">here</a>. David Lamkins owns All of Successful Lisp's copyright.</p>
+<ul>
+<li>
+<p><code>David Lamkins의 Successful Lisp</code> 한국어 번역본입니다.</p>
+<ul>
+<li>번역을 허락해주셔서 감사합니다 <code>David Lamkins</code>.</li>
+<li>그의 웹사이트는 <a href="http://lamkins.net">http://lamkins.net</a>, github는 <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>입니다.</li>
+<li>그의 책은 아마존 닷컴 <a href="https://www.amazon.com/exec/obidos/ASIN/3937526005/daviblamkwebs-20?creative=327641&amp;camp=14573&amp;link_code=as1">이곳</a>에서 원서로 구입할 수 있으며 온라인 버전은 <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">이곳</a>에서 볼 수 있습니다.</li>
+<li><code>Successful Lisp의 모든 저작권은 David Lamkins에게 있습니다.</code></li>
+</ul>
+</li>
+<li>
+<p>This is Korean translation version of <code>David Lamkins's Successful Lisp</code>.</p>
+<ul>
+<li><code>David Lamkins</code>, Thank you for allowing me to translate your book.</li>
+<li>His personnal website is <a href="http://lamkins.net">http://lamkins.net</a>, github is <a href="https://github.com/TieDyedDevil">https://github.com/TieDyedDevil</a>.</li>
+<li>You can buy His original book on Amazon.com <a href="https://www.amazon.com/exec/obidos/ASIN/3937526005/daviblamkwebs-20?creative=327641&amp;camp=14573&amp;link_code=as1">here</a> and you can check his online version of successfull lisp <a href="https://dept-info.labri.fr/~strandh/Teaching/MTP/Common/David-Lamkins/contents.html">here</a>.</li>
+<li><code>David Lamkins owns All of Successful Lisp's copyright.</code></li>
+</ul>
+</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="03-12개의-레슨으로-배우는-필수-리스프"><a class="header" href="#03-12개의-레슨으로-배우는-필수-리스프">03. 12개의 레슨으로 배우는 필수 리스프</a></h1>
 <p>이번 장은 여러분에게 리스프를 시작하기에 앞서 알아야 할 모든것을 가르칠 것입니다.</p>
 <p>언어의 코어 기능들을 모두 다룰 것입니다. 여러분이 이 코어를 리스프 자체라 생각하고, 그렇지 않은 것은 하나의 거대한 표준 라이브러리라 생각하셨으면 합니다. 책을 읽은 후 이를 배경으로, <code>Common Lisp : The Language, 2nd Edition</code>과 같은 메뉴얼을 참조하면, 더욱 편하게 리스프의 남은 부분들을 배울 수 있을 것입니다.</p>
