deploy: 4666f90f693d72da963a6ae70ac30bb830d93ecd

--- a/ch03/lesson_03.html
+++ b/ch03/lesson_03.html
@@ -209,7 +209,7 @@ var-1
 ;;=&gt; VAR-2
 
 var-2
-;;&gt;| Error: Unbound variable :TODO(pyoung)
+;;&gt;| Error: Unbound variable
 
 (set var-1 99)
 ;;=&gt; 99
