--- a/ch03/lesson_02.html
+++ b/ch03/lesson_02.html
@@ -275,7 +275,7 @@ WHAT-IS-THIS?
 <p>리스프가 함수를 평가하면, 앞서 봤던것처럼[p 42], 항상 모든 인자를 우선적으로 평가합니다. 불행히도, 모든 규칙에는 예외가 있으며, (곧 보게될 것처럼)이 규칙도 예외는 아닙니다... 문제는 리스프가 함수의 인자를 평가하지 않을 수 있다라는 점이 아니라, 리스트 폼은 함수 호출이 아닐 수 도 있다라는 점입니다.</p>
 <h2 id="인자들은-좌측에서-우측으로-순서대로-평가된다"><a class="header" href="#인자들은-좌측에서-우측으로-순서대로-평가된다">인자들은 좌측에서 우측으로 순서대로 평가된다</a></h2>
 <p>리스트 폼이 함수를 호출하면, 이의 인자는 항상 좌측에서 우측으로 순서대로 평가됩니다.</p>
-<h2 id="스페셜-폼과-메크로는-인자의-평가하는-방법을-바꿀-수-있다"><a class="header" href="#스페셜-폼과-메크로는-인자의-평가하는-방법을-바꿀-수-있다">스페셜 폼과 메크로는 인자의 평가하는 방법을 바꿀 수 있다.</a></h2>
+<h2 id="스페셜-폼과-매크로는-인자의-평가하는-방법을-바꿀-수-있다"><a class="header" href="#스페셜-폼과-매크로는-인자의-평가하는-방법을-바꿀-수-있다">스페셜 폼과 매크로는 인자의 평가하는 방법을 바꿀 수 있다.</a></h2>
 <p>리스트 폼이 함수 호출이 아닐 수 도 있다 라고 했는데, 그럼 무엇이 될 수 있을까요?
 2가지 경우가 있지만, 결과는 같습니다: 몇몇 인자는 평가되며 몇몇은 평가가 안됩니다. 폼이나 폼이 아니냐에 달려있습니다. 이 예외에 대해서만 알면 됩니다. 다행히도, 대부분의 리스프 시스템은 한두번의 키 입력으로 이에 대한 온라인 문서를 여러분에게 보여줄 것입니다.</p>
 <p>모든 인자가 평가되지 않는 폼은 두가지가 있습니다: 스페셜 폼과 매크로. 리스프는 몇몇 스페셜 폼을 미리 정의해 두었습니다. 언어 자체의 주요 기능이기에 여러분만의 스페셜 폼을 추가할 수는 없습니다. 또 리스프는 몇몇 매크로를 미리 정의해두었습니다. 단, 매크로는 저희가 작성할 수 있습니다. 리스프의 매크로를 이용하면 언어의 강력한 힘을 이용하여 우리만의 기능을 추가 할 수 있습니다. 이 장의 뒷 부분에서 간략하게 간단한 매크로를 작성해 볼 것입니다 [p 61]. 20장에서는[p 188] 복잡한 매크로에 대해 다뤄볼 것입니다.</p>
