--- a/ch03/lesson_07.html
+++ b/ch03/lesson_07.html
@@ -220,16 +220,15 @@
 (my-calculation 3 2 7 5)
 ;;=&gt; 92
 </code></pre>
-<p>:TODO(pyoung)
-함수를 호출할때 인수들은, 순서에 맞게 인자 이름에 바인딩 됩니다. 리스프는 인자 이름의 list에 대한 몇몇 선택적인 변형variations을 지닙니다. 공식적으로 이러한 리스트를 lambda 리스트라 부릅니다 - 21장[p 198]에서 이것의 다른 기능들에 대해 살펴 볼 것입니다.</p>
+<p>함수를 호출할때 인수들은, 순서에 맞게 인자 이름에 바인딩 됩니다. 리스프는 인자 이름의 리스트는 여러가지 변형들이 있습니다. 공식적으로 이러한 변형 리스트를 람다 리스트라 부릅니다 - 21장[p 198]에서 이것의 다른 기능들에 대해 살펴 볼 것입니다.</p>
 <h2 id="lambda---이름-없는-함수-정의"><a class="header" href="#lambda---이름-없는-함수-정의">LAMBDA - 이름 없는 함수 정의</a></h2>
-<p>때로는 프로그램에서 단 한곳에서만 쓰이는 함수가 필요할 것입니다. <code>defun</code>으로 함수를 만들어 이를 한번 호출할 수 있습니다. 때때로, 함수에 나중에 프로그램을 읽을때 도움을 주는 descriptive 이름을 줄 수 있으므로, 이는 할 수 있는 최선이 됩니다. 그러나 종종 여러분이 필요한 함수는 아주 사소하거나 아주 명백하여, 이름을 짓고싶지 않거나 이전에 이름이 쓰였는제 대해 걱정하지 않고자 할 것입니다. 이와 같은 상황에서, 리스프는 <code>lambda</code> 폼을 이용하여 이름이 붙여지지 않는 함수를 만들 수 있게 합니다. <code>lambda</code> 폼은 마치 이름이 없는 <code>defun</code> 폼처럼 보입니다:</p>
+<p>때로는 프로그램에서 단 한곳에서만 쓰이는 함수가 필요할 것입니다. <code>defun</code>으로 함수를 만들어 이를 한번만 호출할 수 있습니다. 그리고 때때로, 나중에 프로그램을 읽을때 도움을 주는 잘 짜여진 이름을 함수에 부여할 수 있습니다. 그러나 종종 여러분이 필요한 함수는 아주 사소하거나 아주 명백하여 이름을 굳이 지을 필요가 없거나, 이전에 이름이 쓰였는지에 대해 걱정하지 않고 싶을 때가 있을 것입니다. 이와 같은 상황에서, 리스프에선 <code>lambda</code> 폼을 이용하여 이름 없는 함수를 만들 수 있습니다. <code>lambda</code> 폼은 마치 이름이 없는 <code>defun</code> 폼처럼 보입니다:</p>
 <pre><code class="language-lisp">(lambda (a b c x)
    (+ (* a (* x x))
       (* b x)
       c))
 </code></pre>
-<p><code>lambda</code> 폼을 평가할 수 없습니다; 이는 리스프가 함수를 찾을 수 있다고 예상하는 곳에서 보여야 합니다 - 보통 form의 첫번째 오소로;</p>
+<p>여기서 <code>lambda</code> 폼을 평가할 수 없습니다; 이는 리스프가 함수 자리라고 예상되어 지는 곳에서만 보여야 합니다 - 보통 폼의 첫번째 요소로;</p>
 <pre><code class="language-lisp">(lambda (a b c x)
      (+ (* a (* x x))
         (* b x)
